<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    tools:context=".views.CriarIncidenciaActivity">

    <EditText
        android:id="@+id/txtTotalRematesBalizaEquipaConvidada_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/convidada"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalRematesBaliza_criarincidencia" />

    <EditText
        android:id="@+id/txtTotalRematesBalizaEquipaCasa_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/casa"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalRematesBaliza_criarincidencia" />

    <EditText
        android:id="@+id/txtTotalRematesEquipaConvidada_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/convidada"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalRemates_criarincidencia" />

    <EditText
        android:id="@+id/txtTotalRematesEquipaCasa_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/casa"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalRemates_criarincidencia" />

    <TextView
        android:id="@+id/txtTotalRemates_criarincidencia"
        android:layout_width="383dp"
        android:layout_height="34dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical|center"
        android:text="@string/remates"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalPosseDeBola_criarincidencia" />

    <TextView
        android:id="@+id/txtTotalRematesBaliza_criarincidencia"
        android:layout_width="383dp"
        android:layout_height="34dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical|center"
        android:text="@string/remates_baliza"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalRemates_criarincidencia" />

    <TextView
        android:id="@+id/txtTotalPosseDeBola_criarincidencia"
        android:layout_width="383dp"
        android:layout_height="34dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical|center"
        android:text="@string/posse_de_bola"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalGolos_criarincidencia" />

    <TextView
        android:id="@+id/txtTotalForaDeJogo_criarincidencia"
        android:layout_width="383dp"
        android:layout_height="34dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical|center"
        android:text="@string/fora_de_jogo"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalRematesBaliza_criarincidencia" />

    <TextView
        android:id="@+id/txtTotalFaltas_criarincidencia"
        android:layout_width="383dp"
        android:layout_height="34dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical|center"
        android:text="@string/faltas_cometidas"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalForaDeJogo_criarincidencia" />

    <TextView
        android:id="@+id/txtTotalGolos_criarincidencia"
        android:layout_width="383dp"
        android:layout_height="34dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical|center"
        android:text="@string/golos"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTotalForaDeJogoEquipaConvidada_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/convidada"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalForaDeJogo_criarincidencia" />

    <EditText
        android:id="@+id/txtTotalForaDeJogoEquipaCasa_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/casa"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalForaDeJogo_criarincidencia" />

    <EditText
        android:id="@+id/txtTotalPosseDebolaEquipaConvidada_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/convidada"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalPosseDeBola_criarincidencia" />

    <EditText
        android:id="@+id/txtTotalPosseDeBolaEquipaCasa_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/casa"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalPosseDeBola_criarincidencia" />

    <EditText
        android:id="@+id/txtTotalFaltasEquipaCasa_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/casa"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalFaltas_criarincidencia" />

    <EditText
        android:id="@+id/txtTotalGolosEquipaCasa_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/casa"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalGolos_criarincidencia" />

    <EditText
        android:id="@+id/txtTotalFaltasEquipaConvidada_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/casa"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalFaltas_criarincidencia" />

    <EditText
        android:id="@+id/txtTotalGolosEquipaConvidada_criarincidencia"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/background_txt"
        android:fontFamily="@font/roboto"
        android:hint="@string/convidada"
        android:paddingLeft="15sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalGolos_criarincidencia" />

    <Button
        android:id="@+id/btGuardarDados_criarincidencia"
        android:layout_width="163sp"
        android:layout_height="40sp"
        android:layout_marginTop="84dp"
        android:background="@drawable/bt_registar_orange"
        android:fontFamily="@font/roboto"
        android:hint="@string/guardar_dados"
        android:textColor="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalFaltas_criarincidencia" />

</androidx.constraintlayout.widget.ConstraintLayout>